# DOGapp

./: .gitignore  CHANGELOG.md  README.md  openapi.json  pyproject.toml  runtests.py
.github/workflows/: github-actions.yml  release_wheel.yml
DOG_apps/: setup.cfg  setup.py
DOG_apps/DOG_API/: apps.py  models.py  urls.py
DOG_apps/dog_api/: apps.py  models.py  views.py
DOG_config/: .setup.py.swp  MANIFEST.in  manage.py  setup.py
DOG_config/DOG_project/: settings.py  urls.py  wsgi.py
dog-api/: pyproject.toml
dog-api/dog-api/: schemas.py
dog-api/dog_api/: models.py
dog-config/: pyproject.toml
dog-config/dog_project/: settings.py
dog_apps/: MANIFEST.in  setup.py
dog_apps/dog_api/: apps.py  models.py  schemas.py  serializers.py  views_api.py
dog_config/: MANIFEST.in  pyproject.toml  setup.py
dog_config/dog_project/: settings.py  urls.py
dogapi/: pyproject.toml
dogapi/dogapi/: apps.py  models.py  schemas.py  serializers.py  tests.py  utils.py  views_api.py
dogapi/dogapi/management/commands/: cache_refresh.py
dogconfig/: pyproject.toml
dogconfig/dogproject/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
dogconfig/dogproject/templates/UI/: _.html  _about.html  _contact.html  _footer.html  _navbar.html
dogdtr/: pyproject.toml
dogdtr/dogdtr/: dtr.py  forms.py  schemas.py  utils.py  views_api.py  views_ui.py
dogdtr/dogdtr/templates/: _dtr.html  _expanddatatype.html  _tree_node_view.html
dogdtr/dogdtr/templates/UI/: _dtr.html  _expanddatatype.html  _form_mimetype.html
dogdtr/dogdtr/templates/UI/tree/: _tree_node_view.html
dogui/: pyproject.toml
dogui/dogui/: apps.py  context_processors.py  forms.py  utils.py  views_ui.py
dogui/dogui/management/commands/: cache_refresh.py
dogui/dogui/static/dogui/style/: _+DataTables.scss.css
dogui/dogui/templates/UI/: _.html  _about.html  _content.html  _fetch.html  _footer.html  _form_pid.html  _header.html  _home.html  _ispid.html  _registered_repositories_table.html  _sniff.html
dogui/dogui/templatetags/: dogui_extras.py
