[tool.poetry]
name = "dogapp"
description = "CLARIN Centre Registry Django project configuration"
version = "0.0.0dev"
license = "./LICENSE.txt"
authors = [
    "Beatriz Sanchez Bribian",
    "Michał Gawor <michal@clarin.eu>",
    "Sander Maijers",
    "André Moreira<andre@clarin.eu>",
]
maintainers = [
    "Michał Gawor <michal@clarin.eu>",
    "Andre Moreira <andre@clarin.eu>",
]
include = [
    { path = "dogconfig/dogproject/templates/*", format = ["sdist", "wheel"] },
]

packages = [
  { include = "dogproject", from = "dogconfig" },
  { include = "dogui", from = "dogui" },
  { include = "dogapi", from = "dogapi" },
  { include = "dogdtr", from = "dogdtr" },
]

[tool.poetry.urls]
changelog = "https://github.com/clarin-eric/DOGapp/blob/main/CHANGELOG.md"
homepage = ""


[tool.poetry.dependencies]
# CLARIN DOGlib
doglib = { url = "https://github.com/clarin-eric/DOGlib/releases/download/1.0.11-a9/doglib-1.0.11a9-py3-none-any.whl" }
# 3rd party
Django = '4.2.23'
django-cors-headers = '4.7.0'
django-debug-toolbar = '6.0.0'
djangorestframework = '3.16.1'
drf-spectacular = '0.28.0'
fontawesomefree = "6.6.0"
python = '>=3.11.*,<4.0'
pymemcache = '4.0.0'
requests = '2.32.5'

[tool.poetry.group.test.dependencies]
django-test-migrations = '1.4.0'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(base, stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

