[tool.poetry]
name = "dogapi"
version = "1.0.2-a3"
description = "Django API views serving Digital Object Gate functionalities"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.1",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
authors = [
    "Michał Gawor <m.j.gawor@uu.nl>",
]
packages = [
    { include = "dogapi" }
]

[tool.poetry.dependencies]
doglib = ">= 1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

