[tool.poetry]
name = "dogapi"
description = "Django API views serving Digital Object Gate functionalities"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.1",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
authors = [
    "Michał Gawor <m.j.gawor@uu.nl>",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

