[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7.0", "wheel"]
[project]
name = "dogconfig"
version = "1.0.1-a1"
description = "Django web application providing Digital Object Gates functionality"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=4.1.1",
    "django-cors-headers>=3.1.13",
    "djangorestframework>=3.14.0",
    "django-debug-toolbar>=4.0.0",
    "dogapi>=1.0.1-a1",
    "drf-yasg>=1.21.4",
    "pymemcache>=4.0.0",
    "pyyaml>=6.0",
    "uritemplate>=4.1.1",
]
authors = [
    { name = "Michal Gawor", email = "m.j.gawor@uu.nl"}
]
[tool.setuptools]
packages = ["dogproject"]
