[tool.poetry]
name = "dogui"
version = "1.0.1-a1"
description = "Django UI templates for Digital Object Gate API consumption"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.1",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
authors = [
    "Michał Gawor <m.j.gawor@uu.nl>"
]
packages = [
    { include = "dogui" }
]

[tool.poetry.dependencies]
dogapi = ">=1.0.1-a1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

